[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-replay"
version = "0.2.0"
description = "Web-based agent session visualizer for Claude Code"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
]

[project.scripts]
agent-replay = "agent_replay.server:main"
